Separacion codigo y librerias de terceros

--- a/Enchapes/Views/Carro/Resumen.cshtml
+++ b/Enchapes/Views/Carro/Resumen.cshtml
@@ -1,4 +1,4 @@
-﻿@model Enchapes.Models.ViewModels.ProductoUsuarioVM
+﻿@model Enchapes_Modelos.ViewModels.ProductoUsuarioVM
 
 <form method="post">
     <br />
