--- a/Enchapes/Views/Home/Detalle.cshtml
+++ b/Enchapes/Views/Home/Detalle.cshtml
@@ -1,4 +1,4 @@
-﻿@model Enchapes.Models.ViewModels.DetalleVM
+﻿@model Enchapes_Modelos.ViewModels.DetalleVM
 @using Enchapes_Utilidades
 <div class="">
     <form method="post">
