--- a/Enchapes/Views/Producto/Eliminar.cshtml
+++ b/Enchapes/Views/Producto/Eliminar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Enchapes.Models.Producto
+﻿@model Enchapes_Modelos.Producto
 @using Enchapes_Utilidades
 @{
     var titulo = "Esta seguro de Eliminar el producto";
