--- a/Enchapes/Views/Producto/Upsert.cshtml
+++ b/Enchapes/Views/Producto/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model Enchapes.Models.ViewModels.ProductoVM
+﻿@model Enchapes_Modelos.ViewModels.ProductoVM
 @using Enchapes_Utilidades
 @{
     var titulo = "Crear Nuevo producto";
