--- a/Enchapes/Views/Home/Index.cshtml
+++ b/Enchapes/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Enchapes.Models.ViewModels.HomeVM
+﻿@model Enchapes_Modelos.ViewModels.HomeVM
 
 <div class="container">
     <div class="text-center">
