--- a/Enchapes/Views/Shared/_ProductoCard.cshtml
+++ b/Enchapes/Views/Shared/_ProductoCard.cshtml
@@ -1,4 +1,4 @@
-﻿@model Enchapes.Models.Producto
+﻿@model Enchapes_Modelos.Producto
 @using Enchapes_Utilidades
 
 <div class="col-lg-4 col-md-6 pb-4 filter @Model.Categoria.NombreCategoria.Replace(' ', '_')">
