Avances en metros cuadrados

--- a/Enchapes/Views/Carro/Index.cshtml
+++ b/Enchapes/Views/Carro/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Producto>
+﻿@model List<Producto>
 @using Enchapes_Utilidades
 
 @if (Model.Count()>0)
@@ -23,45 +23,103 @@
                                 <div class="row" style="color:#821f3d">
                                     <div class="col-lg-2">
                                     </div>
-                                    <div class="col-12 col-lg-7">
-                                        Detalle de producto
-                                    </div>
+                                    @if (User.IsInRole(WC.AdminRole))
+                                    {
+                                        <div class="col-12 col-lg-3">
+                                            Detalle de producto
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="col-12 col-lg-7">
+                                            Detalle de producto
+                                        </div>
+                                    }
+                                    
                                     <div class="col-12 col-lg-2">
                                         Precio por  m &sup2
                                     </div>
+                                    @if (User.IsInRole(WC.AdminRole))
+                                    {
+                                        <div class="col-12 col-lg-2">
+                                           m &sup2
+                                        </div>
+                                        <div class="col-12 col-lg-2">
+                                           Precio total
+                                        </div>
+                                    }
                                     <div class="col-6 col-sm-4 col-lg-1">
                                     </div>
                                 </div>
                             </div>
 
                             <hr />
-                            @foreach (var obj in Model)
+                            @{
+								var totalorden = 0.0;
+                            }
+
+                            @for (int i=0; i<Model.Count; i++)
                             {
+								<input type="hidden" asp-for="@Model[i].Id" />
                                 <div class="row h-100">
                                     <div class="col-4 col-md-2 text-center py-2">
-                                        <img src="@WC.ImagenRuta@obj.ImagenUrl" class="rounded" width="100%" />
+                                        <img src="@WC.ImagenRuta@Model[i].ImagenUrl" class="rounded" width="100%" />
                                     </div>
-                                    <div class="col-8 col-lg-7">
-                                        <h5>@obj.NombreProducto</h5>
-                                        <div style="font-size:11px;">@obj.DescripcionCorta</div>
-                                    </div>
+                                    @if (User.IsInRole(WC.AdminRole))
+                                    {
+                                        <div class="col-8 col-lg-3">
+                                            <h5>@Model[i].NombreProducto</h5>
+                                            <div style="font-size:11px;">@Model[i].DescripcionCorta</div>
+                                        </div>
+                                    }
+                                    else{
+                                        <div class="col-8 col-lg-7">
+                                            <h5>@Model[i].NombreProducto</h5>
+                                            <div style="font-size:11px;">@Model[i].DescripcionCorta</div>
+                                        </div>
+                                    }
+                                    
                                     <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
-                                        <span style="font-size:17px;"> $@obj.Precio</span>/ m &sup2
+                                        <span style="font-size:17px;"> $@Model[i].Precio</span>/ m &sup2
 
                                     </div>
+                                    @if (User.IsInRole(WC.AdminRole))
+                                    {
+                                        <div class="col-4 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                            <input type="text" asp-for="@Model[i].TempMetroCuadrado" class="form-control" />
+                                        </div>
+                                        <div class="col-4 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                            <span style="font-size:17px;"> $@(Model[i].Precio * Model[i].TempMetroCuadrado)</span>/ m &sup2
+                                        </div>
+                                    }
                                     <div class="col-2 col-lg-1 p-0 pt-lg-4 text-center">
-                                        <a asp-action="Remover" asp-route-Id="@obj.Id" class="btn btn-outline-danger">
+                                        <a asp-action="Remover" asp-route-Id="@Model[i].Id" class="btn btn-outline-danger">
                                             <i class="fas fa-trash"></i>
                                         </a>
                                     </div>
                                 </div>
+                                totalorden += Model[i].Precio * Model[i].TempMetroCuadrado;
                             }
+                            @if(User.IsInRole(WC.AdminRole))
+                            {
+								<div class="col-12 text-end pr-4" style="color: #821f3d;">
+									Total Orden: @string.Format("{0:C}", totalorden)
+                                </div>
+                            }    
 
                             <hr />
                         </div>
                         <div class="card-footer">
                             <div class="row">
-                                <div class="col-6 col-md-3 offset-md-9">
+                                <div class="col-6 col-md-3 offset-md-3">
+                                    @if (User.IsInRole(WC.AdminRole))
+                                    {
+                                        <button type="submit" asp-action="ActualizarCarro" class="btn btn-info form-control" formmethod="post">
+                                            <span>Actualizar Carro</span>
+                                        </button>
+                                    }
+                                </div>
+                                <div class="col-6 col-md-3">
                                     <button type="submit" class="btn btn-success form-control ">
                                         <span>Continuar</span>
                                     </button>
