--- a/Enchapes/Views/Home/Detalle.cshtml
+++ b/Enchapes/Views/Home/Detalle.cshtml
@@ -30,6 +30,26 @@
                                         <p class="text-secondary">@Html.Raw(Model.Producto.DescripcionProducto)</p>
                                     </div>
 
+                                    @if (User.IsInRole(WC.AdminRole))
+                                    {
+                                        <div class="col-12">
+                                            Mtr Cuadrado:
+                                        </div>
+
+                                        <div class="col-12" >
+                                            @if (Model.ExisteEnCarro)
+                                            {
+                                                <input asp-for="@Model.Producto.TempMetroCuadrado" disabled class="form-control"/>
+                                            }
+                                            else
+                                            {
+                                                <input asp-for="@Model.Producto.TempMetroCuadrado" class="form-control" />
+                                            }
+                                            <span asp-validation-for="@Model.Producto.TempMetroCuadrado" class="text-danger"></span>
+                                        </div>
+
+                                    }
+
                                 </div>
                             </div>
                         </div>
