Implementacion de ventas

--- a/Enchapes/Views/Carro/Confirmacion.cshtml
+++ b/Enchapes/Views/Carro/Confirmacion.cshtml
@@ -1,6 +1,18 @@
-﻿<div class="text-center">
-    <h1 class="text-info">Confirmación</h1>
-    <p>Hemos recibido tu consulta, un miembro de nuestro equipo se contactará contigo</p>
+﻿@model Enchapes_Modelos.Venta
+
+<div class="text-center">
+
+    @if (Model != null)
+    {
+		<h1 class="text-info">Venta Creada</h1>
+        <p>Venta @Model.Id Creada Satisfactoriamente</p>
+    }
+    else
+    {
+        <h1 class="text-info">Confirmación</h1>
+        <p>Hemos recibido tu consulta, un miembro de nuestro equipo se contactará contigo</p>
+
+	}
     <img src="/imagenes/patio.jpg" width="80%"/>
 </div>
 
