--- a/Enchapes/Views/Shared/_Layout.cshtml
+++ b/Enchapes/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Orden" asp-action="Index">Orden</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Venta" asp-action="Index">Ventas</a></li>
                                 </ul>
                             </li>
                         }
@@ -102,5 +103,6 @@
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <ejs-scripts></ejs-scripts>
 </body>
 </html>
